--- a/RemoteSignTool/RemoteSignTool.Server/NLog.config
+++ b/RemoteSignTool/RemoteSignTool.Server/NLog.config
@@ -1,30 +1,32 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log" >
+      internalLogLevel="Off"
+      internalLogFile="c:\temp\nlog-internal.log">
 
-
-  <!-- optional, add some variabeles
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
-  <variable name="myvar" value="myvalue"/>
-
-  <!-- 
-  See https://github.com/nlog/nlog/wiki/Configuration-file 
+  <!--
+  See https://github.com/nlog/nlog/wiki/Configuration-file
   for information on customizing logging rules and outputs.
-   -->
+  -->
   <targets>
-    <target name="m" xsi:type="MethodCall" className="RemoteSignTool.Server.Logging.LoggingHelper, RemoteSignTool.Server" methodName="NotifyAboutLogEvent">
-      <parameter layout="${level}" />
-      <parameter layout="${message}" />
-      <parameter layout="${exception:format=tostring}" />
-    </target>
+    <!--
+    add your targets here
+    See https://github.com/nlog/NLog/wiki/Targets
+    .NET Core supports Console target
+    -->
+    <target xsi:type="Console" name="console" layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring}" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="m" />
+    <!--
+    add your logging rules here
+    See https://github.com/nlog/NLog/wiki/Rules
+    -->
+
+    <!--Write all log events from minimal level of Debug to console-->
+    <logger name="*" minlevel="Debug" writeTo="console" />
   </rules>
 </nlog>
