replace deprecated zip lib

--- a/RemoteSignTool/RemoteSignTool.Client/RemoteSignTool.Client.csproj
+++ b/RemoteSignTool/RemoteSignTool.Client/RemoteSignTool.Client.csproj
@@ -22,7 +22,7 @@
     <ProjectReference Include="..\RemoteSignTool.Common\RemoteSignTool.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DotNetZip" Version="1.16.0" />
+    <PackageReference Include="SharpZipLib" Version="1.4.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
